logs/django-bootstrap-admin.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/bootstrap'...
Compiling './lib/python3.5/site-packages/bootstrap/helpers.py'...
***   File "./lib/python3.5/site-packages/bootstrap/helpers.py", line 19
    print "%s compressed from %ikb to %ikb" % (photo.name, kb, os.stat(new_path).st_size/1024)
                                          ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/bootstrap/static'...
Listing './lib/python3.5/site-packages/bootstrap/static/admin'...
Listing './lib/python3.5/site-packages/bootstrap/static/admin/css'...
Listing './lib/python3.5/site-packages/bootstrap/static/admin/img'...
Listing './lib/python3.5/site-packages/bootstrap/static/admin/img/defaults'...
Listing './lib/python3.5/site-packages/bootstrap/static/admin/js'...
Listing './lib/python3.5/site-packages/bootstrap/static/admin/js/wysihtml5'...
Listing './lib/python3.5/site-packages/bootstrap/static/admin/js/wysihtml5/dist'...
Listing './lib/python3.5/site-packages/bootstrap/static/admin/js/wysihtml5/parser_rules'...
Listing './lib/python3.5/site-packages/bootstrap/templates'...
Listing './lib/python3.5/site-packages/bootstrap/templates/admin'...
Listing './lib/python3.5/site-packages/bootstrap/templates/admin/auth'...
Listing './lib/python3.5/site-packages/bootstrap/templates/admin/auth/user'...
Listing './lib/python3.5/site-packages/bootstrap/templates/admin/edit_inline'...
Listing './lib/python3.5/site-packages/bootstrap/templates/admin/includes'...
Listing './lib/python3.5/site-packages/bootstrap/templates/registration'...
Listing './lib/python3.5/site-packages/bootstrap/templatetags'...
Listing './lib/python3.5/site-packages/django_bootstrap_admin-0.3.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
